workspace/logs/ekf/build.make.000.log.stderr
In file included from /home/odroid/barc/workspace/src/ekf/linuxinitialize.cpp:8:0:
/home/odroid/barc/workspace/src/ekf/linuxinitialize.h:4:0: warning: "_GNU_SOURCE" redefined [enabled by default]
 #define _GNU_SOURCE
 ^
<command-line>:0:0: note: this is the location of the previous definition
/home/odroid/barc/workspace/src/ekf/linuxinitialize.cpp: In function ‘void mw_CreateTask(void (*)(), int, int, int, int)’:
/home/odroid/barc/workspace/src/ekf/linuxinitialize.cpp:207:71: warning: invalid conversion from ‘void*’ to ‘void* (*)(void*)’ [-fpermissive]
     status = pthread_create(&thread, &attr, (void *) taskHandler, NULL);
                                                                       ^
In file included from /home/odroid/barc/workspace/src/ekf/ert_main.cpp:26:0:
/home/odroid/barc/workspace/src/ekf/linuxinitialize.h:4:0: warning: "_GNU_SOURCE" redefined [enabled by default]
 #define _GNU_SOURCE
 ^
<command-line>:0:0: note: this is the location of the previous definition
In file included from /home/odroid/barc/workspace/src/ekf/slros_busmsg_conversion.h:13:0,
                 from /home/odroid/barc/workspace/src/ekf/slros_busmsg_conversion.cpp:1:
/home/odroid/barc/workspace/src/ekf/slros_msgconvert_utils.h: In instantiation of ‘int slros::getNumItemsInFixedSimpleArray(ArrayType&) [with ArrayType = const double]’:
/home/odroid/barc/workspace/src/ekf/slros_msgconvert_utils.h:145:81:   required from ‘int slros::setReceivedAndCurrentLengths(const BusType&, BusInfoType&, const MsgType&, const slros::ROSPropertyWarnStatus&) [with BusType = double; BusInfoType = SL_Bus_ROSVariableLengthArrayInfo; MsgType = std::vector<double>]’
/home/odroid/barc/workspace/src/ekf/slros_msgconvert_utils.h:345:54:   required from ‘void convertToBusVariablePrimitiveArray(BusType&, BusInfoType&, const MsgType&, const slros::ROSPropertyWarnStatus&) [with BusType = double; BusInfoType = SL_Bus_ROSVariableLengthArrayInfo; MsgType = std::vector<double>]’
/home/odroid/barc/workspace/src/ekf/slros_busmsg_conversion.cpp:38:129:   required from here
/home/odroid/barc/workspace/src/ekf/slros_msgconvert_utils.h:121:47: error: subscripted value is neither array nor pointer
         return (sizeof array) /  (sizeof array[0]);
                                               ^
In file included from /usr/include/c++/4.8/bits/stl_algobase.h:65:0,
                 from /usr/include/c++/4.8/bits/char_traits.h:39,
                 from /usr/include/c++/4.8/string:40,
                 from /opt/ros/kinetic/include/ros/platform.h:55,
                 from /opt/ros/kinetic/include/ros/time.h:53,
                 from /opt/ros/kinetic/include/ros/ros.h:38,
                 from /home/odroid/barc/workspace/src/ekf/slros_busmsg_conversion.h:4,
                 from /home/odroid/barc/workspace/src/ekf/slros_busmsg_conversion.cpp:1:
/usr/include/c++/4.8/bits/stl_iterator_base_types.h: In instantiation of ‘struct std::iterator_traits<double>’:
/usr/include/c++/4.8/bits/stl_algobase.h:381:57:   required from ‘_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = false; _II = double; _OI = double*]’
/usr/include/c++/4.8/bits/stl_algobase.h:428:38:   required from ‘_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = false; _II = double; _OI = __gnu_cxx::__normal_iterator<double*, std::vector<double> >]’
/usr/include/c++/4.8/bits/stl_algobase.h:460:17:   required from ‘_OI std::copy(_II, _II, _OI) [with _II = double; _OI = __gnu_cxx::__normal_iterator<double*, std::vector<double> >]’
/home/odroid/barc/workspace/src/ekf/slros_msgconvert_utils.h:379:65:   required from ‘void convertFromBusVariablePrimitiveArray(MsgType&, const BusType&, const BusInfoType&) [with BusType = double; BusInfoType = SL_Bus_ROSVariableLengthArrayInfo; MsgType = std::vector<double>]’
/home/odroid/barc/workspace/src/ekf/slros_busmsg_conversion.cpp:29:85:   required from here
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:165:53: error: ‘double’ is not a class, struct, or union type
       typedef typename _Iterator::iterator_category iterator_category;
                                                     ^
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:166:53: error: ‘double’ is not a class, struct, or union type
       typedef typename _Iterator::value_type        value_type;
                                                     ^
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:167:53: error: ‘double’ is not a class, struct, or union type
       typedef typename _Iterator::difference_type   difference_type;
                                                     ^
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:168:53: error: ‘double’ is not a class, struct, or union type
       typedef typename _Iterator::pointer           pointer;
                                                     ^
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:169:53: error: ‘double’ is not a class, struct, or union type
       typedef typename _Iterator::reference         reference;
                                                     ^
make[2]: *** [CMakeFiles/ekf_node.dir/slros_busmsg_conversion.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/ekf_node.dir/all] Error 2
make: *** [all] Error 2
